--- a/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-06T19:16:08.011243Z",
-     "start_time": "2022-08-06T19:16:07.569612Z"
+     "end_time": "2022-08-09T00:38:29.497259Z",
+     "start_time": "2022-08-09T00:38:29.120895Z"
     }
    },
    "outputs": [
@@ -60,8 +60,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-06T19:16:08.205053Z",
-     "start_time": "2022-08-06T19:16:08.012725Z"
+     "end_time": "2022-08-09T00:38:29.650962Z",
+     "start_time": "2022-08-09T00:38:29.498587Z"
     }
    },
    "outputs": [],
@@ -215,8 +215,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-06T19:16:08.231921Z",
-     "start_time": "2022-08-06T19:16:08.206555Z"
+     "end_time": "2022-08-09T00:38:29.672150Z",
+     "start_time": "2022-08-09T00:38:29.651951Z"
     }
    },
    "outputs": [],
@@ -361,11 +361,11 @@
     "            _X = bed.read(_np.s_[:, j], dtype=_np.float64).flatten()\n",
     "            _X = _X[gene_ind]  # get gene iid also in outcome iid\n",
     "            _X -= _np.mean(_X)\n",
-    "            _[j] = _X @ _y / N\n",
+    "            _[j] = _X @ _y / N / _np.var(_X)\n",
     "        beta = _  #_np.sign(_)\n",
-    "        _pca = _y @ pca[gene_ind, :] / N\n",
+    "        _pca = _y @ pca[gene_ind, :] / N / _np.var(pca[gene_ind, :], 0)\n",
     "        beta = _np.hstack((_np.array([0.]), _pca, beta))\n",
-    "        beta = _np.sign(beta)\n",
+    "#         beta = _np.sign(beta)\n",
     "    else:\n",
     "        beta = beta_0\n",
     "    # passing other parameters\n",
@@ -509,11 +509,11 @@
     "        _X = bed.read(_np.s_[:, j], dtype=_np.float64).flatten()\n",
     "        _X = _X[gene_ind]  # get gene iid also in outcome iid\n",
     "        _X -= _np.mean(_X)\n",
-    "        _[j] = _X @ _y / N\n",
+    "        _[j] = _X @ _y / N / _np.var(_X)\n",
     "    beta = _  #_np.sign(_)\n",
-    "    _pca = _y @ pca[gene_ind, :] / N\n",
+    "    _pca = _y @ pca[gene_ind, :] / N / _np.var(pca[gene_ind, :], 0)\n",
     "    beta = _np.hstack((_np.array([0.]), _pca, beta)).reshape(1, -1)\n",
-    "    beta = _np.sign(beta)\n",
+    "#     beta = _np.sign(beta)\n",
     "    beta_mat = _np.repeat(beta, len(lambda_) + 1, axis=0)\n",
     "    for j in range(len(lambda_)):\n",
     "        beta_mat[j + 1, :] = SNP_UAG_logistic_SCAD_MCP_PCA(\n",
@@ -547,8 +547,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-06T19:26:41.643690Z",
-     "start_time": "2022-08-06T19:16:08.234100Z"
+     "end_time": "2022-08-09T00:43:36.582676Z",
+     "start_time": "2022-08-09T00:38:29.673362Z"
     },
     "scrolled": true
    },
@@ -559,66 +559,66 @@
      "text": [
       "(10000, 3)\n",
       "L_convex is: 9843.632966454592\n",
-      "[[ 3.93727296e-01 -9.99836718e-01 -1.00010050e+00  1.00041077e+00\n",
-      "   1.70141972e+00 -1.95902339e-01  9.93404642e-01  6.12855318e-01\n",
-      "   0.00000000e+00  6.42710918e-01]\n",
-      " [ 3.75612528e-01 -9.99709461e-01 -1.00023544e+00  1.00057223e+00\n",
-      "   1.91333849e+00  0.00000000e+00  7.34232439e-01  0.00000000e+00\n",
-      "   0.00000000e+00  1.23050239e-01]\n",
-      " [ 5.32390860e-01 -9.99507587e-01 -1.00026331e+00  1.00061649e+00\n",
-      "   2.31276292e+00  0.00000000e+00  6.74484900e-01  0.00000000e+00\n",
-      "   0.00000000e+00  1.43736724e-02]\n",
-      " [ 6.18595442e-01 -9.99314139e-01 -1.00029662e+00  1.00064194e+00\n",
-      "   2.64054658e+00  0.00000000e+00  5.82219119e-01 -7.26282225e-03\n",
+      "[[ 1.19725431e-01  3.95704438e-01  1.76243199e-01  9.25141165e-03\n",
+      "   3.08322375e-01  0.00000000e+00  2.40251468e-01  1.18037856e-02\n",
+      "   3.77459495e-02  2.16734101e-02]\n",
+      " [ 2.73516281e-01  3.95795002e-01  1.76263061e-01  9.22899622e-03\n",
+      "   4.19955797e-01  0.00000000e+00  3.42387805e-01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 6.72031231e-01 -9.99129084e-01 -1.00033266e+00  1.00065229e+00\n",
-      "   2.94187156e+00  0.00000000e+00  4.86570612e-01 -7.20898828e-02\n",
+      " [ 2.73526632e-01  3.95795014e-01  1.76263063e-01  9.22899423e-03\n",
+      "   4.19963540e-01  0.00000000e+00  3.42393194e-01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 7.20192588e-01 -9.98945064e-01 -1.00036542e+00  1.00064427e+00\n",
-      "   3.24856455e+00  0.00000000e+00  4.10104174e-01 -1.79705796e-01\n",
+      " [ 2.73536981e-01  3.95795027e-01  1.76263066e-01  9.22899224e-03\n",
+      "   4.19972784e-01  0.00000000e+00  3.42400085e-01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 7.71807708e-01 -9.98758585e-01 -1.00039374e+00  1.00061710e+00\n",
-      "   3.57016953e+00  0.00000000e+00  3.60567893e-01 -3.23687853e-01\n",
+      " [ 2.73547330e-01  3.95795039e-01  1.76263068e-01  9.22899024e-03\n",
+      "   4.19983529e-01  0.00000000e+00  3.42408477e-01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 8.29709668e-01 -9.98567250e-01 -1.00041828e+00  1.00057116e+00\n",
-      "   3.90940662e+00  0.00000000e+00  3.40856025e-01 -5.00858925e-01\n",
+      " [ 2.73557678e-01  3.95795051e-01  1.76263070e-01  9.22898825e-03\n",
+      "   4.19995776e-01  0.00000000e+00  3.42418370e-01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 8.94540744e-01 -9.98369106e-01 -1.00044042e+00  1.00050723e+00\n",
-      "   4.26666659e+00  0.00000000e+00  3.51836899e-01 -7.08848908e-01\n",
+      " [ 2.73568024e-01  3.95795063e-01  1.76263073e-01  9.22898626e-03\n",
+      "   4.20009524e-01  0.00000000e+00  3.42429765e-01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 9.65944065e-01 -9.98162732e-01 -1.00046187e+00  1.00042610e+00\n",
-      "   4.64145810e+00  0.00000000e+00  3.93265907e-01 -9.45436235e-01\n",
+      " [ 2.73578369e-01  3.95795076e-01  1.76263075e-01  9.22898427e-03\n",
+      "   4.20024773e-01  0.00000000e+00  3.42442660e-01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.04300232e+00 -9.97947521e-01 -1.00048458e+00  1.00032856e+00\n",
-      "   5.03291317e+00  0.00000000e+00  4.64157770e-01 -1.20844059e+00\n",
+      " [ 2.73588713e-01  3.95795088e-01  1.76263077e-01  9.22898227e-03\n",
+      "   4.20041523e-01  0.00000000e+00  3.42457056e-01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.12447365e+00 -9.97723812e-01 -1.00051059e+00  1.00021551e+00\n",
-      "   5.44001838e+00  0.00000000e+00  5.63033395e-01 -1.49578310e+00\n",
+      " [ 3.37510805e-01  3.95938916e-01  1.76288440e-01  9.21182437e-03\n",
+      "   5.81118015e-01 -1.96780558e-02  4.69804034e-01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.20899966e+00 -9.97492666e-01 -1.00054193e+00  1.00008828e+00\n",
-      "   5.86179622e+00  0.00000000e+00  6.88156682e-01 -1.80556555e+00\n",
+      " [ 3.37510597e-01  3.95938929e-01  1.76288442e-01  9.21182353e-03\n",
+      "   5.81128815e-01 -1.96861502e-02  4.69811017e-01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.29531018e+00 -9.97255291e-01 -1.00058047e+00  9.99948668e-01\n",
-      "   6.29747779e+00  0.00000000e+00  8.37766128e-01 -2.13611592e+00\n",
+      " [ 3.37510389e-01  3.95938942e-01  1.76288444e-01  9.21182269e-03\n",
+      "   5.81141117e-01 -1.96957469e-02  4.69819501e-01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.38239113e+00 -9.97012419e-01 -1.00062788e+00  9.99798761e-01\n",
-      "   6.74663408e+00  0.00000000e+00  1.01027109e+00 -2.48599399e+00\n",
+      " [ 3.37510181e-01  3.95938956e-01  1.76288447e-01  9.21182185e-03\n",
+      "   5.81154920e-01 -1.97068460e-02  4.69829487e-01  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.46957539e+00 -9.96764002e-01 -1.00068555e+00  9.99640665e-01\n",
-      "   7.20922527e+00  0.00000000e+00  1.20437872e+00 -2.85397012e+00\n",
+      " [ 3.37509973e-01  3.95938969e-01  1.76288449e-01  9.21182101e-03\n",
+      "   5.81170226e-01 -1.97194474e-02  4.69840975e-01 -1.29784520e-06\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.55652416e+00 -9.96509419e-01 -1.00075477e+00  9.99476358e-01\n",
-      "   7.68552800e+00 -1.23646837e-02  1.41911161e+00 -3.23900034e+00\n",
-      "   1.24414434e-02  0.00000000e+00]\n",
-      " [ 1.64332372e+00 -9.96247807e-01 -1.00083698e+00  9.99307800e-01\n",
-      "   8.17618675e+00 -4.54290961e-02  1.65391557e+00 -3.64014868e+00\n",
-      "   4.33251363e-02  0.00000000e+00]\n",
-      " [ 1.73023055e+00 -9.95978224e-01 -1.00093350e+00  9.99136914e-01\n",
-      "   8.68194951e+00 -9.85907913e-02  1.90844807e+00 -4.05657600e+00\n",
-      "   9.38955544e-02  0.00000000e+00]\n",
-      " [ 1.81789845e+00 -9.95699621e-01 -1.00104505e+00  9.98965230e-01\n",
-      "   9.20102822e+00 -1.70918582e-01  2.18220346e+00 -4.48609678e+00\n",
-      "   1.65604958e-01 -1.83669257e-02]]\n"
+      " [ 3.37509765e-01  3.95938983e-01  1.76288451e-01  9.21182017e-03\n",
+      "   5.81187034e-01 -1.97335512e-02  4.69853966e-01 -4.09826367e-06\n",
+      "   0.00000000e+00 -1.77318123e-07]\n",
+      " [ 3.31962119e-01  3.96096291e-01  1.76312220e-01  9.20505463e-03\n",
+      "   7.85816727e-01 -1.98705781e-01  6.30373833e-01 -6.26644575e-02\n",
+      "   0.00000000e+00 -3.08882327e-02]\n",
+      " [ 3.36065425e-01  3.96273487e-01  1.76329966e-01  9.20390040e-03\n",
+      "   1.01811819e+00 -3.84545219e-01  8.17529853e-01 -1.68490759e-01\n",
+      "   2.88233314e-03 -9.83455938e-02]\n",
+      " [ 3.58308419e-01  3.96475811e-01  1.76339094e-01  9.20665075e-03\n",
+      "   1.28728297e+00 -5.68663088e-01  1.04008059e+00 -3.12186525e-01\n",
+      "   6.22630284e-02 -1.97543987e-01]\n",
+      " [ 3.93105269e-01  3.96708507e-01  1.76339327e-01  9.21325670e-03\n",
+      "   1.59034805e+00 -7.55703529e-01  1.29279615e+00 -4.96268907e-01\n",
+      "   1.78269163e-01 -3.31863981e-01]\n",
+      " [ 4.40283536e-01  3.96975848e-01  1.76329787e-01  9.22489824e-03\n",
+      "   1.92802519e+00 -9.45129089e-01  1.57526983e+00 -7.16419692e-01\n",
+      "   3.45505604e-01 -4.97586497e-01]]\n"
      ]
     }
    ],
