--- a/LM_SCAD_MCP_np_MODULE-SNP_PCA.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP_PCA.ipynb
@@ -27,6 +27,9 @@
     }
    ],
    "source": [
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings('ignore')\n",
     "# import os, sys\n",
     "# import collections\n",
     "import numpy as _np\n",
