--- a/logistic_SCAD_MCP_np_MODULE-SNP_PCA.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP_PCA.ipynb
@@ -215,18 +215,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T00:38:29.672150Z",
-     "start_time": "2022-08-09T00:38:29.651951Z"
+     "end_time": "2022-08-09T00:43:36.582676Z",
+     "start_time": "2022-08-09T00:38:29.673362Z"
     }
    },
    "outputs": [],
    "source": [
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_update_smooth_grad_convex_logistic(N, SNP_ind, bed, beta_md, y,\n",
-    "                                            outcome_iid, pca_p, pca):\n",
+    "def _SNP_update_smooth_grad_convex_logistic_PCA(N, SNP_ind, bed, beta_md, y,\n",
+    "                                                outcome_iid, pca_p, pca):\n",
     "    '''\n",
     "    Update the gradient of the smooth convex objective component.\n",
     "    '''\n",
@@ -262,12 +262,13 @@
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_update_smooth_grad_SCAD_logistic(N, SNP_ind, bed, beta_md, y,\n",
-    "                                          outcome_iid, _lambda, a, pca_p, pca):\n",
+    "def _SNP_update_smooth_grad_SCAD_logistic_PCA(N, SNP_ind, bed, beta_md, y,\n",
+    "                                              outcome_iid, _lambda, a, pca_p,\n",
+    "                                              pca):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for SCAD penalty.\n",
     "    '''\n",
-    "    return _SNP_update_smooth_grad_convex_logistic(\n",
+    "    return _SNP_update_smooth_grad_convex_logistic_PCA(\n",
     "        N=N,\n",
     "        SNP_ind=SNP_ind,\n",
     "        bed=bed,\n",
@@ -280,13 +281,13 @@
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_update_smooth_grad_MCP_logistic(N, SNP_ind, bed, beta_md, y,\n",
-    "                                         outcome_iid, _lambda, gamma, pca_p,\n",
-    "                                         pca):\n",
+    "def _SNP_update_smooth_grad_MCP_logistic_PCA(N, SNP_ind, bed, beta_md, y,\n",
+    "                                             outcome_iid, _lambda, gamma,\n",
+    "                                             pca_p, pca):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for MCP penalty.\n",
     "    '''\n",
-    "    return _SNP_update_smooth_grad_convex_logistic(\n",
+    "    return _SNP_update_smooth_grad_convex_logistic_PCA(\n",
     "        N=N,\n",
     "        SNP_ind=SNP_ind,\n",
     "        bed=bed,\n",
@@ -299,7 +300,7 @@
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_lambda_max_logistic(bed, y, outcome_iid, N, SNP_ind):\n",
+    "def _SNP_lambda_max_logistic_PCA(bed, y, outcome_iid, N, SNP_ind):\n",
     "    \"\"\"\n",
     "    Calculate the lambda_max, i.e., the minimum lambda to nullify all penalized betas.\n",
     "    \"\"\"\n",
@@ -311,7 +312,7 @@
     "    #     y_temp -= _np.mean(y)\n",
     "    #     y_temp /= _np.std(y)\n",
     "    p = len(list(bed.sid))\n",
-    "    grad_at_0 = _SNP_update_smooth_grad_convex_logistic(\n",
+    "    grad_at_0 = _SNP_update_smooth_grad_convex_logistic_PCA(\n",
     "        N=N,\n",
     "        SNP_ind=SNP_ind,\n",
     "        bed=bed,\n",
@@ -403,7 +404,7 @@
     "                                         ord=2)  # restarting\n",
     "            converged = (_np.linalg.norm(beta_md - beta_md_old, ord=_np.infty)\n",
     "                         < tol)\n",
-    "            smooth_grad = _SNP_update_smooth_grad_SCAD_logistic(\n",
+    "            smooth_grad = _SNP_update_smooth_grad_SCAD_logistic_PCA(\n",
     "                N=N,\n",
     "                SNP_ind=SNP_ind,\n",
     "                bed=bed,\n",
@@ -443,7 +444,7 @@
     "                                         ord=2)  # restarting\n",
     "            converged = (_np.linalg.norm(beta_md - beta_md_old, ord=_np.infty)\n",
     "                         < tol)\n",
-    "            smooth_grad = _SNP_update_smooth_grad_MCP_logistic(\n",
+    "            smooth_grad = _SNP_update_smooth_grad_MCP_logistic_PCA(\n",
     "                N=N,\n",
     "                SNP_ind=SNP_ind,\n",
     "                bed=bed,\n",
@@ -466,21 +467,21 @@
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def SNP_solution_path_logistic(bed_file,\n",
-    "                               bim_file,\n",
-    "                               fam_file,\n",
-    "                               outcome,\n",
-    "                               outcome_iid,\n",
-    "                               lambda_,\n",
-    "                               L_convex,\n",
-    "                               SNP_ind,\n",
-    "                               pca,\n",
-    "                               beta_0=_np.ones(1),\n",
-    "                               tol=1e-5,\n",
-    "                               maxit=500,\n",
-    "                               penalty=\"SCAD\",\n",
-    "                               a=3.7,\n",
-    "                               gamma=2.):\n",
+    "def SNP_solution_path_logistic_PCA(bed_file,\n",
+    "                                   bim_file,\n",
+    "                                   fam_file,\n",
+    "                                   outcome,\n",
+    "                                   outcome_iid,\n",
+    "                                   lambda_,\n",
+    "                                   L_convex,\n",
+    "                                   SNP_ind,\n",
+    "                                   pca,\n",
+    "                                   beta_0=_np.ones(1),\n",
+    "                                   tol=1e-5,\n",
+    "                                   maxit=500,\n",
+    "                                   penalty=\"SCAD\",\n",
+    "                                   a=3.7,\n",
+    "                                   gamma=2.):\n",
     "    '''\n",
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
@@ -665,21 +666,21 @@
     "# outcome_iid = outcome_iid[iid_ind]\n",
     "\n",
     "print(\n",
-    "    SNP_solution_path_logistic(bed_file=bed_file,\n",
-    "                               bim_file=bim_file,\n",
-    "                               fam_file=fam_file,\n",
-    "                               outcome=outcome,\n",
-    "                               outcome_iid=outcome_iid,\n",
-    "                               lambda_=np.linspace(.00001, .1, 20)[::-1],\n",
-    "                               SNP_ind=np.arange(9),\n",
-    "                               L_convex=L_convex,\n",
-    "                               pca=pca,\n",
-    "                               beta_0=np.ones(1),\n",
-    "                               tol=1e-5,\n",
-    "                               maxit=500,\n",
-    "                               penalty=\"SCAD\",\n",
-    "                               a=10000,\n",
-    "                               gamma=2.)[:, :10])"
+    "    SNP_solution_path_logistic_PCA(bed_file=bed_file,\n",
+    "                                   bim_file=bim_file,\n",
+    "                                   fam_file=fam_file,\n",
+    "                                   outcome=outcome,\n",
+    "                                   outcome_iid=outcome_iid,\n",
+    "                                   lambda_=np.linspace(.00001, .1, 20)[::-1],\n",
+    "                                   SNP_ind=np.arange(9),\n",
+    "                                   L_convex=L_convex,\n",
+    "                                   pca=pca,\n",
+    "                                   beta_0=np.ones(1),\n",
+    "                                   tol=1e-5,\n",
+    "                                   maxit=500,\n",
+    "                                   penalty=\"SCAD\",\n",
+    "                                   a=10000,\n",
+    "                                   gamma=2.)[:, :10])"
    ]
   },
   {
