--- a/LM_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -12,20 +12,11 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-23T19:18:43.360721Z",
-     "start_time": "2022-07-23T19:18:42.999214Z"
+     "end_time": "2022-08-09T22:52:59.206036Z",
+     "start_time": "2022-08-09T22:52:58.823998Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/Snoopy/anaconda3/lib/python3.9/site-packages/paramiko/transport.py:236: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
-      "  \"class\": algorithms.Blowfish,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "\n",
@@ -63,8 +54,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-23T19:18:43.519443Z",
-     "start_time": "2022-07-23T19:18:43.362064Z"
+     "end_time": "2022-08-09T22:52:59.365371Z",
+     "start_time": "2022-08-09T22:52:59.207392Z"
     }
    },
    "outputs": [],
@@ -217,8 +208,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-23T19:18:43.538262Z",
-     "start_time": "2022-07-23T19:18:43.520498Z"
+     "end_time": "2022-08-09T22:52:59.385049Z",
+     "start_time": "2022-08-09T22:52:59.366436Z"
     }
    },
    "outputs": [],
@@ -253,7 +244,7 @@
     "        _X = bed.read(_np.s_[:, j], dtype=_np.int8).flatten()\n",
     "        _X = _X[gene_ind]  # get gene iid also in outcome iid\n",
     "        _XTXbeta[j] = _X @ _\n",
-    "    _XTXbeta = _np.hstack((_np.array([np.sum(_)]), _XTXbeta))\n",
+    "    _XTXbeta = _np.hstack((_np.array([_np.sum(_)]), _XTXbeta))\n",
     "    del _\n",
     "    return 1 / N * _XTXbeta\n",
     "\n",
@@ -354,7 +345,7 @@
     "            _X -= _np.mean(_X)\n",
     "            _[j] = _X @ _y / N\n",
     "        beta = _  #_np.sign(_)\n",
-    "        beta = _np.hstack((np.array([0]), beta))\n",
+    "        beta = _np.hstack((_np.array([0]), beta))\n",
     "    else:\n",
     "        beta = beta_0\n",
     "    # passing other parameters\n",
@@ -489,7 +480,7 @@
     "        _X -= _np.mean(_X)\n",
     "        _[j] = _X @ _y / N\n",
     "    beta = _  #_np.sign(_)\n",
-    "    beta = _np.hstack((np.array([0]), beta)).reshape(1, -1)\n",
+    "    beta = _np.hstack((_np.array([0]), beta)).reshape(1, -1)\n",
     "\n",
     "    beta_mat = _np.zeros((len(lambda_) + 1, p + 1))\n",
     "    beta_mat = _np.repeat(beta, len(lambda_) + 1, axis=0)\n",
@@ -523,8 +514,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-23T19:23:27.744157Z",
-     "start_time": "2022-07-23T19:18:43.539700Z"
+     "end_time": "2022-08-09T23:02:03.497030Z",
+     "start_time": "2022-08-09T22:52:59.386192Z"
     }
    },
    "outputs": [
@@ -536,67 +527,66 @@
       "[1. 0. 1. ... 2. 1. 1.]\n",
       "[1. 2. 0. ... 0. 2. 1.]\n",
       "[2. 1. 2. ... 2. 2. 2.]\n",
-      "(5000,)\n",
-      "[[ 1.67989907e+00  1.94302623e+00  0.00000000e+00  4.79107544e-01\n",
+      "[[ 1.68924940e+00  1.94306087e+00  0.00000000e+00  4.78113021e-01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 3.17419240e+00  1.30774576e+00  0.00000000e+00  7.24439125e-02\n",
+      " [ 3.18592568e+00  1.30431374e+00  0.00000000e+00  7.16278626e-02\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 3.58781391e+00  1.05898494e+00  0.00000000e+00  0.00000000e+00\n",
+      " [ 3.60052453e+00  1.05394065e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 3.84671713e+00  8.85856152e-01  0.00000000e+00  0.00000000e+00\n",
+      " [ 3.85935995e+00  8.80933832e-01  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 3.67426618e+00  1.06324918e+00  0.00000000e+00  0.00000000e+00\n",
+      " [ 3.68691163e+00  1.05834397e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 3.47025882e+00  1.26894431e+00  0.00000000e+00  0.00000000e+00\n",
+      " [ 3.48290636e+00  1.26404294e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 3.35849994e+00  1.42462357e+00  0.00000000e+00  0.00000000e+00\n",
+      " [ 3.37147148e+00  1.41829215e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 3.13240883e+00  1.80072789e+00 -9.85637811e-02  0.00000000e+00\n",
+      " [ 3.14492499e+00  1.78942555e+00 -9.23351335e-02  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 2.80400320e+00  2.35141960e+00 -3.59388173e-01  7.83434214e-02\n",
+      " [ 2.81893795e+00  2.33955954e+00 -3.50936643e-01  7.38589680e-02\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 2.35504142e+00  2.99383056e+00 -6.44074549e-01  2.10770378e-01\n",
+      " [ 2.37182711e+00  2.98112646e+00 -6.35864269e-01  2.05652705e-01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.27550769e+00  4.23486125e+00 -1.04223016e+00  4.31149227e-01\n",
+      " [ 1.82254163e+00  3.68909223e+00 -9.10562680e-01  3.52261054e-01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 1.04293878e+00  4.07441025e+00 -1.10742880e+00  8.31838811e-01\n",
+      " [ 1.17855116e+00  4.11670947e+00 -1.28888670e+00  8.30807504e-01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 9.19743111e-01  4.13538737e+00 -1.47135017e+00  1.23977521e+00\n",
+      " [ 1.05502530e+00  4.13019856e+00 -1.58018001e+00  1.22933642e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 8.27400845e-01  4.15213557e+00 -2.08850414e+00  1.92923311e+00\n",
+      " [ 9.49618702e-01  4.13955327e+00 -2.16048911e+00  1.90275190e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 7.32218195e-01  4.13636136e+00 -2.55293143e+00  2.50464375e+00\n",
+      " [ 8.21487202e-01  4.10812064e+00 -2.57746653e+00  2.48132998e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 7.32211647e-01  4.13636470e+00 -2.55293118e+00  2.50465098e+00\n",
+      " [ 8.21478911e-01  4.10812563e+00 -2.57746354e+00  2.48133794e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 7.32205098e-01  4.13636804e+00 -2.55293094e+00  2.50465821e+00\n",
+      " [ 8.21470619e-01  4.10813061e+00 -2.57746056e+00  2.48134589e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 7.32198549e-01  4.13637137e+00 -2.55293069e+00  2.50466544e+00\n",
+      " [ 8.21462324e-01  4.10813559e+00 -2.57745757e+00  2.48135384e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 7.32191997e-01  4.13637470e+00 -2.55293045e+00  2.50467267e+00\n",
+      " [ 8.21454027e-01  4.10814056e+00 -2.57745459e+00  2.48136178e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 7.32185448e-01  4.13637804e+00 -2.55293020e+00  2.50467989e+00\n",
-      "  -6.25096994e-06 -7.35579898e-06 -6.94739641e-06 -5.41054807e-06\n",
-      "  -6.52189501e-06 -6.74276702e-06]]\n"
+      " [ 8.21445731e-01  4.10814554e+00 -2.57745161e+00  2.48136973e+00\n",
+      "  -8.90173980e-06 -8.90306686e-06 -7.85923022e-06 -7.08617094e-06\n",
+      "  -8.79984849e-06 -7.82620006e-06]]\n"
      ]
     }
    ],
@@ -604,9 +594,9 @@
     "import numpy as np\n",
     "from bed_reader import open_bed\n",
     "\n",
-    "bed_file = r\"./sim/sim1.bed\"\n",
-    "bim_file = r\"./sim/sim1.bim\"\n",
-    "fam_file = r\"./sim/sim1.fam\"\n",
+    "bed_file = r\"./MI_AG/tests/sim/sim1.bed\"\n",
+    "bim_file = r\"./MI_AG/tests/sim/sim1.bim\"\n",
+    "fam_file = r\"./MI_AG/tests/sim/sim1.fam\"\n",
     "\n",
     "_bed = open_bed(filepath=bed_file,\n",
     "                fam_filepath=fam_file,\n",
@@ -672,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
