--- a/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-23T19:50:49.578981Z",
-     "start_time": "2022-07-23T19:50:48.947867Z"
+     "end_time": "2022-08-09T22:53:42.263871Z",
+     "start_time": "2022-08-09T22:53:41.757688Z"
     }
    },
    "outputs": [],
@@ -55,8 +55,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-23T19:50:51.327965Z",
-     "start_time": "2022-07-23T19:50:49.579951Z"
+     "end_time": "2022-08-09T22:53:42.495567Z",
+     "start_time": "2022-08-09T22:53:42.265866Z"
     }
    },
    "outputs": [],
@@ -209,8 +209,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-23T19:50:51.390962Z",
-     "start_time": "2022-07-23T19:50:51.329960Z"
+     "end_time": "2022-08-09T22:53:42.526927Z",
+     "start_time": "2022-08-09T22:53:42.497084Z"
     }
    },
    "outputs": [],
@@ -245,7 +245,7 @@
     "        _X = bed.read(_np.s_[:, j], dtype=_np.int8).flatten()\n",
     "        _X = _X[gene_ind]  # get gene iid also in outcome iid\n",
     "        _XTXbeta[j] = _X @ _\n",
-    "    _XTXbeta = _np.hstack((_np.array([np.sum(_)]), _XTXbeta))\n",
+    "    _XTXbeta = _np.hstack((_np.array([_np.sum(_)]), _XTXbeta))\n",
     "    del _\n",
     "    return _XTXbeta / (2. * N)\n",
     "\n",
@@ -348,7 +348,7 @@
     "            _X -= _np.mean(_X)\n",
     "            _[j] = _X @ _y / N\n",
     "        beta = _np.sign(_)\n",
-    "        beta = _np.hstack((np.array([0]), beta))\n",
+    "        beta = _np.hstack((_np.array([0]), beta))\n",
     "    else:\n",
     "        beta = beta_0\n",
     "    # passing other parameters\n",
@@ -484,7 +484,7 @@
     "        _X -= _np.mean(_X)\n",
     "        _[j] = _X @ _y / N\n",
     "    beta = _  #_np.sign(_)\n",
-    "    beta = _np.hstack((np.array([0]), beta)).reshape(1, -1)\n",
+    "    beta = _np.hstack((_np.array([0]), beta)).reshape(1, -1)\n",
     "\n",
     "    beta_mat = _np.zeros((len(lambda_) + 1, p + 1))\n",
     "    beta_mat = _np.repeat(beta, len(lambda_) + 1, axis=0)\n",
@@ -518,8 +518,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-23T19:52:42.837522Z",
-     "start_time": "2022-07-23T19:50:51.392964Z"
+     "end_time": "2022-08-09T22:57:51.715902Z",
+     "start_time": "2022-08-09T22:53:42.528953Z"
     }
    },
    "outputs": [
@@ -528,66 +528,66 @@
      "output_type": "stream",
      "text": [
       "L_convex is: 9843.632966454592\n",
-      "[[ 2.38566088e-01  2.29488585e-01  0.00000000e+00  1.57738109e-01\n",
-      "   2.98301404e-02  2.19142327e-02  3.72744785e-02  2.69603136e-02\n",
-      "   3.66896066e-02  3.62271613e-02]\n",
-      " [ 4.91861133e-01  3.05008709e-01  0.00000000e+00  1.86560491e-01\n",
-      "   4.67534081e-03  1.93937668e-03  7.98121978e-03  3.47246789e-03\n",
-      "   7.86572911e-03  7.48464598e-03]\n",
-      " [ 5.14427920e-01  3.09634215e-01  0.00000000e+00  1.86535991e-01\n",
+      "[[ 2.39037834e-01  2.26206877e-01  0.00000000e+00  1.69254062e-01\n",
+      "   2.77472853e-02  2.25527279e-02  3.66237139e-02  3.30632485e-02\n",
+      "   3.97043242e-02  3.44321058e-02]\n",
+      " [ 4.93705047e-01  2.99884818e-01  0.00000000e+00  2.05687748e-01\n",
+      "   3.67605746e-03  2.03969566e-03  7.56132936e-03  5.90573032e-03\n",
+      "   9.53170545e-03  6.51642113e-03]\n",
+      " [ 6.86332218e-01  3.24320591e-01  0.00000000e+00  1.96981028e-01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 6.97851786e-01  3.44223327e-01  0.00000000e+00  1.80080744e-01\n",
+      " [ 6.86346032e-01  3.24321147e-01  0.00000000e+00  1.96978827e-01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 6.97864690e-01  3.44224631e-01  0.00000000e+00  1.80078626e-01\n",
+      " [ 6.86359846e-01  3.24323205e-01  0.00000000e+00  1.96978129e-01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 6.97877593e-01  3.44227437e-01  0.00000000e+00  1.80078010e-01\n",
+      " [ 6.86373660e-01  3.24326765e-01  0.00000000e+00  1.96978932e-01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 6.97890495e-01  3.44231746e-01  0.00000000e+00  1.80078896e-01\n",
+      " [ 6.86387473e-01  3.24331827e-01  0.00000000e+00  1.96981237e-01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 6.97903397e-01  3.44237556e-01  0.00000000e+00  1.80081284e-01\n",
+      " [ 6.86401285e-01  3.24338391e-01  0.00000000e+00  1.96985044e-01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 6.97916299e-01  3.44244867e-01  0.00000000e+00  1.80085174e-01\n",
+      " [ 6.86415097e-01  3.24346456e-01  0.00000000e+00  1.96990353e-01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 6.97929200e-01  3.44253681e-01  0.00000000e+00  1.80090565e-01\n",
+      " [ 6.86428908e-01  3.24356023e-01  0.00000000e+00  1.96997163e-01\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 6.97942101e-01  3.44263996e-01  0.00000000e+00  1.80097458e-01\n",
-      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
-      "   0.00000000e+00  0.00000000e+00]\n",
-      " [ 6.97955000e-01  3.44275812e-01  0.00000000e+00  1.80105852e-01\n",
-      "   9.08556371e-07  8.31367395e-08  1.45327887e-06  5.23786131e-07\n",
-      "   1.38038448e-06  1.37171505e-06]\n",
-      " [ 6.97967899e-01  3.44289130e-01  0.00000000e+00  1.80115748e-01\n",
-      "   3.31823463e-06  1.66741349e-06  4.40768442e-06  2.54869874e-06\n",
-      "   4.26188296e-06  4.24455179e-06]\n",
-      " [ 6.97980796e-01  3.44303949e-01  0.00000000e+00  1.80127144e-01\n",
-      "   7.22872137e-06  4.75251908e-06  8.86290819e-06  6.07442632e-06\n",
-      "   8.64418261e-06  8.61819972e-06]\n",
-      " [ 6.97993692e-01  3.44320268e-01  0.00000000e+00  1.80140042e-01\n",
-      "   1.26397033e-05  9.33814243e-06  1.48186418e-05  1.11006574e-05\n",
-      "   1.45269707e-05  1.44923484e-05]\n",
-      " [ 6.98006586e-01  3.44338088e-01  0.00000000e+00  1.80154439e-01\n",
-      "   1.95508673e-05  1.54239726e-05  2.22745771e-05  1.76270808e-05\n",
-      "   2.19099345e-05  2.18666876e-05]\n",
-      " [ 7.88412872e-01  5.06638672e-01 -1.18771724e-05  3.02766487e-01\n",
-      "   3.85314057e-02  2.99920348e-02  4.51711337e-02  3.45339485e-02\n",
-      "   4.36312468e-02  4.39407464e-02]\n",
-      " [ 7.88413583e-01  5.06647374e-01 -1.75341657e-05  3.02771424e-01\n",
-      "   3.85288048e-02  2.99887675e-02  4.51691883e-02  3.45310245e-02\n",
-      "   4.36290662e-02  4.39386475e-02]\n",
-      " [ 7.88414294e-01  5.06657577e-01 -2.46931376e-05  3.02777865e-01\n",
-      "   3.85277063e-02  2.99870026e-02  4.51687454e-02  3.45296029e-02\n",
-      "   4.36283880e-02  4.39380509e-02]\n",
-      " [ 7.88415005e-01  5.06669271e-01 -3.33542467e-05  3.02785801e-01\n",
-      "   3.85281100e-02  2.99867400e-02  4.51698046e-02  3.45296835e-02\n",
-      "   4.36292121e-02  4.39389566e-02]]\n"
+      " [ 6.86442719e-01  3.24367091e-01  0.00000000e+00  1.97005475e-01\n",
+      "   0.00000000e+00  0.00000000e+00  6.32162731e-07  2.98601475e-07\n",
+      "   8.51361868e-07  4.64311913e-07]\n",
+      " [ 6.86456528e-01  3.24379661e-01  0.00000000e+00  1.97015288e-01\n",
+      "   1.30644851e-06  7.90728017e-07  2.76554107e-06  2.09841164e-06\n",
+      "   3.20392424e-06  2.42983620e-06]\n",
+      " [ 6.86470336e-01  3.24393732e-01  0.00000000e+00  1.97026602e-01\n",
+      "   4.11381459e-06  3.08238953e-06  6.39984139e-06  5.39913408e-06\n",
+      "   7.05738935e-06  5.89627726e-06]\n",
+      " [ 6.86484143e-01  3.24409303e-01  0.00000000e+00  1.97039416e-01\n",
+      "   8.42178243e-06  6.87467099e-06  1.15347529e-05  1.02004549e-05\n",
+      "   1.24114419e-05  1.08633222e-05]\n",
+      " [ 6.86497948e-01  3.24426375e-01  0.00000000e+00  1.97053732e-01\n",
+      "   1.42300363e-05  1.21672590e-05  1.81699647e-05  1.65020604e-05\n",
+      "   1.92657667e-05  1.73306581e-05]\n",
+      " [ 7.81233074e-01  4.72705029e-01 -1.08889945e-06  3.12939917e-01\n",
+      "   1.95892978e-02  1.47620742e-02  2.94057191e-02  2.51053443e-02\n",
+      "   3.09294869e-02  2.71855668e-02]\n",
+      " [ 7.81236415e-01  4.72714417e-01 -2.71726064e-06  3.12946397e-01\n",
+      "   1.95874679e-02  1.47598528e-02  2.94047608e-02  2.51039678e-02\n",
+      "   3.09285831e-02  2.71843910e-02]\n",
+      " [ 7.81239756e-01  4.72725307e-01 -5.84790930e-06  3.12954378e-01\n",
+      "   1.95871401e-02  1.47591334e-02  2.94053046e-02  2.51040933e-02\n",
+      "   3.09291814e-02  2.71847173e-02]\n",
+      " [ 7.81243097e-01  4.72737699e-01 -1.04810177e-05  3.12963862e-01\n",
+      "   1.95883143e-02  1.47599159e-02  2.94073504e-02  2.51057208e-02\n",
+      "   3.09312816e-02  2.71865455e-02]\n",
+      " [ 7.81246437e-01  4.72751582e-01 -1.66167582e-05  3.12974841e-01\n",
+      "   1.95909902e-02  1.47622002e-02  2.94108979e-02  2.51088500e-02\n",
+      "   3.09348835e-02  2.71898755e-02]]\n"
      ]
     }
    ],
@@ -595,9 +595,9 @@
     "import numpy as np\n",
     "from bed_reader import open_bed\n",
     "\n",
-    "bed_file = r\"./sim/sim1.bed\"\n",
-    "bim_file = r\"./sim/sim1.bim\"\n",
-    "fam_file = r\"./sim/sim1.fam\"\n",
+    "bed_file = r\"./MI_AG/tests/sim/sim1.bed\"\n",
+    "bim_file = r\"./MI_AG/tests/sim/sim1.bim\"\n",
+    "fam_file = r\"./MI_AG/tests/sim/sim1.fam\"\n",
     "\n",
     "_bed = open_bed(filepath=bed_file,\n",
     "                fam_filepath=fam_file,\n",
@@ -664,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
